--- a/composer.json
+++ b/composer.json
@@ -1,36 +1,35 @@
 {
-  "name": "studio/laravel-totem",
+  "name": "cebugle/laravel-totem",
   "description": "A Laravel package to manage your cron jobs through a beautiful dashboard",
   "keywords": [
     "laravel",
     "schedule",
     "manager",
-    "Code Studio",
+    "Cebugle",
     "totem"
   ],
   "license": "MIT",
   "authors": [
     {
-      "name": "Roshan Gautam",
-      "email": "roshan.gautam@hotmail.com"
+      "name": "Darwin Luague",
+      "email": "darwinluague9001@gmail.com"
     }
   ],
   "require": {
-    "php": "^8.0.0|^8.1.0",
+    "php": "^8.2",
     "ext-json": "*",
     "doctrine/dbal": "^3.1",
-    "illuminate/bus": "^8.11|^9.0",
-    "illuminate/console": "^8.11|^9.0",
-    "illuminate/contracts": "^8.11|^9.0",
-    "illuminate/database": "^8.11|^9.0",
-    "illuminate/events": "^8.11|^9.0",
-    "illuminate/notifications": "^8.11|^9.0",
+    "illuminate/bus": "^10.0",
+    "illuminate/console": "^10.0",
+    "illuminate/contracts": "^10.0",
+    "illuminate/database": "^10.0",
+    "illuminate/events": "^10.0",
+    "illuminate/notifications": "^10.0",
     "laravelcollective/html": "^6.0"
   },
   "require-dev": {
     "mockery/mockery": "^1.0",
-    "orchestra/database": "^6.0|^7.0",
-    "orchestra/testbench" : "^6.0|^7.0",
+    "orchestra/testbench" : "^8.0",
     "phpunit/phpunit": "^9.0"
   },
   "suggest": {
@@ -38,8 +37,8 @@
   },
   "autoload": {
     "psr-4": {
-      "Studio\\Totem\\": "src/",
-      "Studio\\Totem\\Tests\\": "tests/",
+      "Cebugle\\Totem\\": "src/",
+      "Cebugle\\Totem\\Tests\\": "tests/",
       "Database\\Factories\\": "database/factories/"
     }
   },
@@ -50,7 +49,7 @@
     },
     "laravel": {
       "providers": [
-        "Studio\\Totem\\Providers\\TotemServiceProvider"
+        "Cebugle\\Totem\\Providers\\TotemServiceProvider"
       ]
     }
   },
